Fixed 2 styles on index

--- a/styles/style1.css
+++ b/styles/style1.css
@@ -243,7 +243,7 @@
         padding-top: 10px;
         padding-bottom: 10px;
         color: black;
-        background-color: #65CBDA;
+        background-color: #959899;
     }
     
     /* DEFAULT: */
