--- a/styles/style2.css
+++ b/styles/style2.css
@@ -9,6 +9,7 @@ html{
 
     /* DEFAULT: Background image,border color, background color, align center  */
 body {
+    padding: 1%;
     background-image: url('../media/pozas.jpg');
     border-color: black;
     background-color: white;
@@ -18,8 +19,8 @@ body {
 
     /* DEFAULT: Definign top navigation menu style */
 nav{
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 10px;
+    margin-right: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
 
@@ -30,14 +31,14 @@ nav{
 
     border-radius: 10px;
 
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-left: 1%;
+    padding-right: 1%;
+    padding-top: 1%;
+    padding-bottom: 1%;
 
     position: sticky;
-    top: 10px;
-    
+    top: 1%;
+
     background-color: #5c8dd9;
 }
 /* DEFAULT: <a> that are child of <nav> */
@@ -74,7 +75,6 @@ nav>a:active{
 /* DEFAULT: back and front colors*/
 nav>a:hover{
     background-color: #ddd;
-    color: black;
 }
 
 /* DEFAULT: box dimensions*/
@@ -245,17 +245,25 @@ li{
 
 /* DEFAULT: */
 nav>button{
-    margin: 10px;
-    border: 1px solid;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+    border-left: 3px solid;
+    border-right: 3px solid;
+    border-top: 3px solid;
+    border-bottom: 3px solid;
+
     border-radius: 10px;
-    text-align: center;
+
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 10px;
     padding-bottom: 10px;
-    color: black;
+    
     background-color: #65CBDA;
-
+    color: #1D5171;
 }
 
 /* DEFAULT: */
@@ -349,4 +357,8 @@ a.glow:hover{
 .YTwindow{
     object-fit: contain;
     width: 400px;
+}
+
+.p-alignleft{
+  text-align: left;
 }
